# autoclaw-web

./: .dockerignore  .gitignore  Dockerfile  README.md  electron-builder.yml  next.config.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  requirements.txt  tsconfig.json  types.d.ts  vercel.json
api/: hello.py  index.py
app/: layout.tsx  robots.ts  sitemap.ts
components/: AiCreditBadge.tsx  ChatWidget.tsx  CreditsBadge.tsx  DashboardShell.tsx  GrowthOpsView.tsx  LanguageSwitcher.tsx  OrgContext.tsx  TrialLeadSearch.tsx  WeChatGuard.tsx
docs/: WECHAT_PAY.md  google-ads-audit.md  google-ads-experiments-design.md  google-ads-launch-checklist.md
electron/: loading.html  main.js  make-icon.js  notify.js  offline.html  package-lock.json  package.json  preload.js
lib/: ai.ts  audit.ts  billing.ts  chunking.ts  credits.ts  csv.test.ts  csv.ts  db.ts  desktop-notify.ts  email-gen.ts  embeddings.ts  google-ads-preflight.test.ts  google-ads-preflight.ts  google-ads-sync.ts  google-ads-weekly-email.test.ts  google-ads-weekly-email.ts  google-ads.test.ts  google-ads.ts  guardrails.ts  keys.ts  leads.ts  llamaindex.ts  openrouter-benchmark.ts  oss-monitor.test.ts  oss-monitor.ts  rag.ts  roles-server.ts  roles.ts  schema.sql  seo.ts  stock-sim.ts  validations.ts  wechat-pay.ts  workflow-engine.ts  xpilot-image.ts  youtube.ts
scripts/: create-sandbox-account.mjs  extract-personas.mjs  generate-campaign-emails.mjs  grant-enterprise-admin.mjs  import-autoclaw-leads.mjs  import-shenzhen-leads.mjs  import-trade-leads.mjs  local-cron.sh  post-first-x-thread.mjs  (+6 more)
(+252 files in other folders)
